Add hover tooltip and fix transparency and loading

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <span class="checkmark round"></span>
                         </label>
                         <label class="checkbox-container">Paved Roads
-                            <input id="check-paved_oads" type="checkbox" checked="true" data-filter_id="7">
+                            <input id="check-paved_roads" type="checkbox" checked="true" data-filter_id="7">
                             <span class="checkmark round"></span>
                         </label>
 
