--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <link rel="stylesheet" href="assets/css/transitions.css" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/12.1.0/nouislider.min.css" />
+
+
+      <!-- w3 style thingz -->
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="css/w3.css" />
+      <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
+
+
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/12.1.0/nouislider.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wnumb/1.1.0/wNumb.min.js"></script>
@@ -27,21 +35,30 @@
 </head>
 
 <body>
-    <!-- Navbar (sit on top) -->
-    <div class="w3-top">
-        <div class="w3-bar w3-white w3-wide w3-padding w3-card">
-            <a href="/" class="w3-bar-item w3-button"> <b>PRO-AGUA</b> </a>
-            <!-- Float links to the right. Hide them on small screens -->
-            <div class="w3-right w3-hide-small">
-                <a href="/" class="w3-bar-item w3-button"> Land Use </a>
-                <a href="/mining.html" class="w3-bar-item w3-button">
-                    Mining
-                </a>
-                <a href="about.html" class="w3-bar-item w3-button">About</a>
-                <a href="help.html" class="w3-bar-item w3-button">Help</a>
-            </div>
-        </div>
+
+  <!-- Menu Navbar -->
+  <div class="w3-top">
+    <div class="nav-global w3-bar w3-theme-d2 w3-left-align">
+      <a href="#" class="nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link" onclick="load_global()">Home</a>
+      <a href="#" class="nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link 2015-tab" onclick="projection2D()">Reforestación de la Pampa</a>
+      <a href="../viz_risk/poll_pop.html" class="nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link">Desarollo futuro</a>
+      
+        <button onclick="myFunction()" class="dropdown nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link">Desarollo futuro</button>
+          <div id="myDropdown" class="dropdown-content">
+            <a href="#">Region de Puerto Maldonado</a>
+            <a href="#">Region de Tahamanu-Cobija</a>
+          </div>
+
+
+      <a href="Pollination_historical.html" class="nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link" onclick="projection3D()">Servicios ecosistemicos area MAP</a>
+      <a href="methods_polli.html" class="nav-link w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link">Todo el basin Amazonico</a>
+      
+
+      <a href="#" class="nav-link w3-right w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link" onclick="showNow()">&#9432;</a>
+      <a href="#" class="nav-link w3-right w3-bar-item w3-button w3-hide-small w3-hover-grey nav-link" onclick="showAbout()">About</a>
     </div>
+  </div>
+  <!-- End Menu Navbar -->
 
     <div id="main">
         <div id="map"></div>
