working on the organization of things

--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto"
     />
+    <link rel="shortcut icon" href="#" />
+
+    <!-- include for navbar -->
     <link rel="stylesheet" href="./tachyons.min.css" />
     <link rel="stylesheet" href="./src/dropdown.css" />
-    <link rel="shortcut icon" href="#" />
+    <!-- include for navbar -->
   </head>
 
   <body>
-    <!-- Menu Navbar -->
+    <!-- include for navbar -->
     <div class="w3-top" id="navbar"></div>
-    <!-- End Menu Navbar -->
-
+    <!-- include for navbar -->
     <div id="main">
       <div id="map"></div>
       <div id="filters-container">
@@ -301,6 +303,8 @@
         </div>
       </div>
     </div>
-    <script type="module" src="src/navbar.lit.js"></script>
+    <!-- include for navbar -->
+    <script type="module" src="src/components/navbar.lit.js"></script>
+    <!-- include for navbar -->
   </body>
 </html>
