--- a/pampa.html
+++ b/pampa.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <link rel="stylesheet" href="lib/css/tachyons.min.css" />
+    <link rel="stylesheet" href="css/dropdown.css" />
+  </head>
 
-<head>
-	
-
-</head>
-
-<body>
-	
-	<p> Placeholder for the Pampa page </p>
-
-	<iframe style="width: 100%; height: 90vh;" src='https://charlotte.users.earthengine.app/view/pampa'>
-</body>
+  <body>
+    <p>Placeholder for the Pampa page</p>
+    <div class="flex">
+      <div class="w-70">
+        <div class="bg-red">
+          <div
+            style="width: 100%; height: 90vh;"
+            src="https://charlotte.users.earthengine.app/view/pampa"
+          ></div>
+        </div>
+      </div>
+      <div class="w-30">
+        <div id="text" class="measure pa3">
+          this is a box for text. Look! You can see things here :)
+        </div>
+        <div id="control_panel"></div>
+        <div id="barchart"></div>
+      </div>
+    </div>
+  </body>
+  <script type="module" src="js/control_panel/index.js"></script>
+</html>
