vega visualization added to control panel

--- a/pampa.html
+++ b/pampa.html
@@ -3,6 +3,9 @@
   <head>
     <link rel="stylesheet" href="lib/css/tachyons.min.css" />
     <link rel="stylesheet" href="css/dropdown.css" />
+    <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@4"></script>
   </head>
 
   <body>
@@ -26,4 +29,5 @@
     </div>
   </body>
   <script type="module" src="js/control_panel/index.js"></script>
+  <script type="module" src="js/control_panel/barChart.js"></script>
 </html>
