--- a/pampa.html
+++ b/pampa.html
@@ -13,10 +13,10 @@
     <div class="flex">
       <div class="w-70">
         <div class="bg-red">
-          <div
+          <iframe
             style="width: 100%; height: 90vh;"
             src="https://charlotte.users.earthengine.app/view/pampa"
-          ></div>
+          ></iframe>
         </div>
       </div>
       <div class="w-30">
