slightly better tabs and styling

--- a/pampa.html
+++ b/pampa.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@4"></script>
   </head>
 
-  <body>
+  <body class="bg-black-90 white-80 avenir fw5">
     <p>Placeholder for the Pampa page</p>
     <div class="flex">
       <div class="w-70">
@@ -24,7 +24,7 @@
           this is a box for text. Look! You can see things here :)
         </div>
         <div id="control_panel"></div>
-        <div id="barchart"></div>
+        <div id="barchart" class="white"></div>
       </div>
     </div>
   </body>
