navbar fixed up

--- a/pampa.html
+++ b/pampa.html
@@ -6,10 +6,14 @@
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@4"></script>
+    <link
+      rel="stylesheet"
+      href="https://www.w3schools.com/lib/w3-theme-black.css"
+    />
   </head>
 
   <body class="bg-black-90 white-80 avenir fw5">
-    <p>Placeholder for the Pampa page</p>
+    <nav id="navbar"></nav>
     <div class="flex">
       <div class="w-70">
         <div class="bg-red">
@@ -30,4 +34,5 @@
   </body>
   <script type="module" src="js/control_panel/index.js"></script>
   <script type="module" src="js/control_panel/barChart.js"></script>
+  <script type="module" src="js/navbar/navbar.lit.js"></script>
 </html>
