--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -46,7 +46,7 @@
   </style>
 
   <body>
-    <p>Menu here</p>
+    <nav id="navbar"></nav>
 
     <div class="w3-twothird" id="maps">
       <div id="map1" class="map"></div>
