change amzonia to https, wrapped symbol calls in html, created a separate file to configure our control panel

--- a/amazonia.html
+++ b/amazonia.html
@@ -29,7 +29,7 @@
 	<img src="static/images/ci.png" height=90% alt="CI">
 	<h5>(Creds) Rachel Neugarten</h5>
 
-	<iframe style="width: 100%; height: 90vh;" src="http://conservation.maps.arcgis.com/apps/MapSeries/index.html?appid=548c9e5d123d42f9bb73bca4559d78ae"/></iframe>
+	<iframe style="width: 100%; height: 90vh;" src="https://conservation.maps.arcgis.com/apps/MapSeries/index.html?appid=548c9e5d123d42f9bb73bca4559d78ae"/></iframe>
 
 
 	<img src="static/images/ci.png" height=90% alt="CI">
