--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -16,12 +16,13 @@
     <link rel="stylesheet" href="css/dropdown.css" />
 
     <!-- Leaflet CSS -->
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-      crossorigin=""
-    />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="crossorigin=""/>
+
+    <!--Needed for Chart D3.js/C3.js-->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="lib/js/c3.min.js"></script>
+    <link rel="stylesheet" href="lib/css/c3.min.css"/>
+
 
     <!-- Vega for Altair plots -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -110,9 +111,12 @@
         </div>
       </div>
 
-      <div id="barchart" class="white"></div>
+      <div id="chartPEM"></div>
+
     </div>
   </body>
+
+  <script src="js/chartPEM.js"></script>
 
   <script type="module" src="js/navbar/navbar.lit.js"></script>
   <script type="module" src="js/futuroPem.lit.js"></script>
