--- a/pampa.html
+++ b/pampa.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/dropdown.css" />
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css"/>
 
+
+    <!-- Vega for Altair plots -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-lite@3"></script>
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@4"></script>
