switching to development

--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -16,13 +16,17 @@
     <link rel="stylesheet" href="css/dropdown.css" />
 
     <!-- Leaflet CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="crossorigin=""/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+      integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+      crossorigin=""
+    />
 
     <!--Needed for Chart D3.js/C3.js-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="lib/js/c3.min.js"></script>
-    <link rel="stylesheet" href="lib/css/c3.min.css"/>
-
+    <link rel="stylesheet" href="lib/css/c3.min.css" />
 
     <!-- Vega for Altair plots -->
     <script src="https://cdn.jsdelivr.net/npm/vega@5"></script>
@@ -34,8 +38,6 @@
       src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"
       crossorigin=""
     ></script>
-
-    <script src="lib/js/includehtml.js"></script>
   </head>
 
   <link rel="stylesheet" href="css/style.css" />
@@ -112,7 +114,6 @@
       </div>
 
       <div id="chartPEM"></div>
-
     </div>
   </body>
 
@@ -121,9 +122,6 @@
   <script type="module" src="js/navbar/navbar.lit.js"></script>
   <script type="module" src="js/futuroPem.lit.js"></script>
   <script type="module" src="js/control_panel/barChart.js"></script>
-  <script>
-    includeHTML();
-  </script>
 
   <script src="lib/js/L.Map.Sync.js"></script>
   <script src="js/mapsPEM.js"></script>
