--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -124,5 +124,6 @@
   <script type="module" src="js/control_panel/barChart.js"></script>
 
   <script src="lib/js/L.Map.Sync.js"></script>
+  <script src="js/map/canvasLayer.js"></script>
   <script src="js/mapsPEM.js"></script>
 </html>
