--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -71,9 +71,9 @@
       </div>
 
       <div id="control_panel"></div>
-      <div id="tabsPanel">
+      <!-- <div id="tabsPanel">
         <div w3-include-html="html/tab_servicios.html"></div>
-      </div>
+      </div> -->
 
       <div id="mapControls">
         <div w3-include-html="html/mapControls.html"></div>
