--- a/amazonia.html
+++ b/amazonia.html
@@ -37,7 +37,7 @@
       Technical report:
     </a>
 
-    <img src="static/images/ci.png" height="90%" alt="CI" />
+    <img src="static/logos/ci.png" height="90%" alt="CI" />
     <h5>(Creds) Rachel Neugarten</h5>
 
     <iframe
@@ -45,7 +45,7 @@
       src="https://conservation.maps.arcgis.com/apps/MapSeries/index.html?appid=548c9e5d123d42f9bb73bca4559d78ae"
     ></iframe>
 
-    <img src="static/images/ci.png" height="90%" alt="CI" />
+    <img src="static/logos/ci.png" height="90%" alt="CI" />
     <h5>(Creds) Rachel Neugarten</h5>
 
     <!-- PPt prez: https://drive.google.com/file/d/	0B8bUKASNLPFgRkZwYzZ4cXNuaG8/view -->
