--- a/MAP.html
+++ b/MAP.html
@@ -1,3 +1,7 @@
+<!-- To include Spanish accents -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+
+
 <html>
 	<head>
 	   <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
