--- a/template.html
+++ b/template.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+<!-- To include Spanish accents -->
+<meta http-equiv="content-type" content="text/html;charset=utf-8"/>
+
 <html>
   <head>
   	<!-- Needed for Navbar-->
