--- a/futuroPEM.html
+++ b/futuroPEM.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="w3-third" style="background-color:'yellow';">
-      <div id="text">
+      <div id="cursorDisplay">
         <p>Texto sobre escenario analisis...</p>
       </div>
 
